# traffic-light-optimization

./: .gitignore  control.py  edges.edg.xml  inference.py  net.net.xml  nodes.nod.xml  plot.py  pyproject.toml  route.rou.xml  sim.sumocfg  training.py
.github/workflows/: claude.yml
